RESOLVED FIXED 232409
Assertions in findFirstSlotElement hit when removing two slots with the same name in a single shadow tree
https://bugs.webkit.org/show_bug.cgi?id=232409
Summary Assertions in findFirstSlotElement hit when removing two slots with the same ...
Gabriel Nava Marino
Reported 2021-10-27 15:42:47 PDT
The proposed changes are related to bug 229748.
Attachments
Patch (3.89 KB, patch)
2021-10-27 15:50 PDT, Gabriel Nava Marino
no flags
Patch (3.95 KB, patch)
2021-10-27 16:08 PDT, Gabriel Nava Marino
no flags
Gabriel Nava Marino
Comment 1 2021-10-27 15:50:12 PDT
Ryosuke Niwa
Comment 2 2021-10-27 15:55:54 PDT
Comment on attachment 442641 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=442641&action=review > LayoutTests/fast/shadow-dom/slot-removal-same-name.html:1 > +<script> Missing DOCTYPE? > LayoutTests/fast/shadow-dom/slot-removal-same-name.html:3 > + let shadow0 = document.body.attachShadow({mode: 'open'}); Can we call this just shadowRoot? Also, use const since we're reassigning another value to it. > LayoutTests/fast/shadow-dom/slot-removal-same-name.html:6 > + document.body.offsetTop; document.body.getBoundingClientRect() is more sure way of ensuring updating the layout. offsetTop can be optimized in some cases.
Gabriel Nava Marino
Comment 3 2021-10-27 16:08:25 PDT
Gabriel Nava Marino
Comment 4 2021-10-27 16:09:07 PDT
Address feedback comments.
EWS
Comment 5 2021-10-27 19:20:55 PDT
Committed r284969 (243620@main): <https://commits.webkit.org/243620@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442644 [details].
Radar WebKit Bug Importer
Comment 6 2021-10-27 19:21:30 PDT
Note You need to log in before you can comment on or make changes to this bug.