Assertions in findFirstSlotElement hit when removing two slots with the same name in a single shadow tree https://bugs.webkit.org/show_bug.cgi?id=232409

Patch by Gabriel Nava Marino <gnavamarino@apple.com> on 2021-10-27
Reviewed by Ryosuke Niwa.

Source/WebCore:

When resolveSlotsAfterSlotMutation is called during removeAllChildrenWithScriptAssertion,
it can clear slot.element but not slot.elementCount, which is decremented for each
slot element in removeSlotElementByName. When multiple slots elements are removed in
removeAllChildrenWithScriptAssertion, this results in slot.element being null but
slot.elementCount not being zero in findFirstSlotElement called within destroyRenderTreeIfNeeded.

This patch removes assertions in findFirstSlotElement which wrongly asserted this condition to never happen.

Test: fast/shadow-dom/slot-removal-same-name.html

* dom/SlotAssignment.cpp:
(WebCore::SlotAssignment::findFirstSlotElement):

LayoutTests:

* fast/shadow-dom/slot-removal-same-name-expected.txt: Added.
* fast/shadow-dom/slot-removal-same-name.html: Added.


Canonical link: https://commits.webkit.org/243620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284969 268f45cc-cd09-0410-ab3c-d52691b4dbfc